name:                rstemplate
version:             0.5
synopsis:            very simple template system
description:         very simple template system
category:            Data
license:             BSD3
license-file:        LICENSE
author:              James Sanders
maintainer:          jimmyjazz14@gmail.com
build-depends:       base
build-type:          Simple
Cabal-Version:       >= 1.2

Library
     hs-source-dirs: src
     Build-Depends:     base >= 4
                        , mtl >= 1.1.0.2
                        , bytestring >= 0.9.1.5
                        , filepath >= 1.1.0.3
     Exposed-modules:   Text.RSTemplate
     Other-modules:     Text.RSTemplate.Parser
                        ,Text.RSTemplate.Parser.Types
                        ,Text.RSTemplate.Eval
                        ,Text.RSTemplate.Eval.Types
                        ,Text.RSTemplate.EvalIO

     ghc-options:       -O2