name:                rstemplate
version:             1.0.4
synopsis:            very simple template system
description:         very simple template system
category:            Data
license:             BSD3
license-file:        LICENSE
author:              James Sanders
maintainer:          jimmyjazz14@gmail.com
build-depends:       base
build-type:          Simple
Cabal-Version:       >= 1.2

Library
     hs-source-dirs: src
     Build-Depends:     base >= 4
                        , monads-fd >= 0.1 && <0.2
                        , bytestring >= 0.9.1.5
                        , filepath >= 1.1.0.3
                        , parsec >= 3.1.0 
                        , containers >= 0.3                                           
     Exposed-modules:   Text.RSTemplate
                        ,Text.RSTemplate.Eval.Context    
     Other-modules:     Text.RSTemplate.Parser
                        ,Text.RSTemplate.Parser.Types
                        ,Text.RSTemplate.Eval
                        ,Text.RSTemplate.Eval.Types
                        ,Text.RSTemplate.Eval.Builtins



     ghc-options:       -O2 -fvia-C
