name:                rstemplate
version:             1.2.1
synopsis:            very simple template system
description:         very simple template system
category:            Data
license:             BSD3
license-file:        LICENSE
author:              James Sanders
maintainer:          jimmyjazz14@gmail.com
build-depends:       base
build-type:          Simple
Cabal-Version:       >= 1.2

Library
     hs-source-dirs: src
     Build-Depends:     base >= 4
                        , mtl
                        , bytestring >= 0.9.1.5
                        , filepath >= 1.1.0.3
                        , parsec >= 3
                        , containers >= 0.3                                           
     Exposed-modules:   Text.RSTemplate
     Other-modules:     Text.RSTemplate.Parser
                        ,Text.RSTemplate.Parser.Types
                        ,Text.RSTemplate.Eval
                        ,Text.RSTemplate.Eval.Context
                        ,Text.RSTemplate.Eval.ContextWriter         
                        ,Text.RSTemplate.Eval.FancyContext
                        ,Text.RSTemplate.Eval.Types
                        ,Text.RSTemplate.Eval.Builtins



     ghc-options:       -O2 -fvia-C
