name:                twine
version:             1.2.2
synopsis:            very simple template system
description:         very simple template system
category:            Data
license:             BSD3
license-file:        LICENSE
author:              James Sanders
maintainer:          jimmyjazz14@gmail.com
homepage:            http://twine.james-sanders.com
build-depends:       base
build-type:          Simple
Cabal-Version:       >= 1.2

Library
     hs-source-dirs: src
     Build-Depends:     base >= 4
                        , mtl
                        , bytestring >= 0.9.1.5
                        , filepath >= 1.1.0.3
                        , parsec >= 3
                        , containers >= 0.3                                           
     Exposed-modules:   Text.Twine
     Other-modules:     Text.Twine.Parser
                        ,Text.Twine.Parser.Types
                        ,Text.Twine.Eval
                        ,Text.Twine.Eval.Context
                        ,Text.Twine.Eval.ContextWriter         
                        ,Text.Twine.Eval.FancyContext
                        ,Text.Twine.Eval.Types
                        ,Text.Twine.Eval.Builtins



     ghc-options:       -O2 -fvia-C
